LinKreta_POC_Repository/force-app/main/default/objects/GM_SUB_MARKETS__x/GM_SUB_MARKETS__x.object-meta.xml
<CustomObject>
    <description>GM_SUB_MARKETS</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>GM_SUB_MARKETS</externalName>
    <label>GM_SUB_MARKETS</label>
    <pluralLabel>GM_SUB_MARKETS</pluralLabel>
</CustomObject>