LinKreta_POC_Repository/force-app/main/default/objects/GM_SUB_MARKETS__x/fields/GRP_COMP_ID__c.field-meta.xml
<CustomField>
    <fullName>GRP_COMP_ID__c</fullName>
    <description>GRP_COMP_ID</description>
    <externalDeveloperName>GRP_COMP_ID</externalDeveloperName>
    <label>GRP_COMP_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>