LinKreta_POC_Repository/force-app/main/default/objects/GM_SUB_MARKETS__x/fields/MARKET_ID__c.field-meta.xml
<CustomField>
    <fullName>MARKET_ID__c</fullName>
    <description>MARKET_ID</description>
    <externalDeveloperName>MARKET_ID</externalDeveloperName>
    <label>MARKET_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>