LinKreta_POC_Repository/force-app/main/default/objects/GM_SUB_MARKETS__x/fields/SUB_MARKET_DESC__c.field-meta.xml
<CustomField>
    <fullName>SUB_MARKET_DESC__c</fullName>
    <description>SUB_MARKET_DESC</description>
    <externalDeveloperName>SUB_MARKET_DESC</externalDeveloperName>
    <label>SUB_MARKET_DESC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>