LinKreta_POC_Repository/force-app/main/default/objects/GM_SUB_MARKETS__x/fields/SUB_MARKET_ID__c.field-meta.xml
<CustomField>
    <fullName>SUB_MARKET_ID__c</fullName>
    <description>SUB_MARKET_ID</description>
    <externalDeveloperName>SUB_MARKET_ID</externalDeveloperName>
    <label>SUB_MARKET_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>